@@ -47,3 +47,16 @@ task runHowdyFX(type:JavaExec) {
     group "my programs"
     standardInput = System.in
 }
+
+task runMyJavaFX(type:JavaExec) {
+    main = "edu.realemj.Exercises14.MyJavaFX"
+    classpath = sourceSets.main.runtimeClasspath
+    jvmArgs = [
+            "--module-path", classpath.asPath,
+            "--add-modules", "javafx.controls",
+            "--add-modules", "javafx.fxml"
+    ]
+    dependsOn 'classes'
+    group "my javafx programs"
+    standardInput = System.in
+}
